ci: split gateway workflow into discover-render and publish stages; update docs to reflect multi-stage backend pipeline

--- a/.github/workflows/deploy-gateway.yml
+++ b/.github/workflows/deploy-gateway.yml
@@ -18,20 +18,21 @@ env:
   REGION: ${{ vars.GCP_REGION }}
 
 jobs:
-  deploy-gateway:
+  discover-render:
+    name: Discover URLs & Render OpenAPI
     runs-on: ubuntu-latest
+    outputs:
+      api_id: ${{ steps.decide.outputs.api_id }}
+      gateway_id: ${{ steps.decide.outputs.gateway_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Auth to Google Cloud
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
       - name: Setup gcloud SDK
         uses: google-github-actions/setup-gcloud@v1
-
       - name: Decide environment and IDs
         id: decide
         shell: bash
@@ -45,7 +46,6 @@ jobs:
           fi
           echo "api_id=${API_ID}" >> "$GITHUB_OUTPUT"
           echo "gateway_id=${GATEWAY_ID}" >> "$GITHUB_OUTPUT"
-
       - name: Discover Cloud Run service URLs
         id: discover
         shell: bash
@@ -61,7 +61,6 @@ jobs:
           echo "adscenter_url=$(get_url adscenter)" >> "$GITHUB_OUTPUT"
           echo "workflow_url=$(get_url workflow)" >> "$GITHUB_OUTPUT"
           echo "console_url=$(get_url console)" >> "$GITHUB_OUTPUT"
-
       - name: Render OpenAPI (gateway.yaml)
         env:
           PROJECT_ID: ${{ env.PROJECT_ID }}
@@ -78,23 +77,43 @@ jobs:
           bash scripts/gateway/render-gateway-config.sh deployments/api-gateway/gateway.yaml out/gateway.yaml
           echo '--- rendered (tail) ---'
           tail -n 20 out/gateway.yaml || true
+      - name: Upload rendered spec
+        uses: actions/upload-artifact@v4
+        with:
+          name: gateway-openapi
+          path: out/gateway.yaml
 
+  publish-gateway:
+    name: Publish API Gateway
+    runs-on: ubuntu-latest
+    needs: discover-render
+    steps:
+      - name: Download rendered spec
+        uses: actions/download-artifact@v4
+        with:
+          name: gateway-openapi
+          path: out
+      - name: Auth to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+      - name: Setup gcloud SDK
+        uses: google-github-actions/setup-gcloud@v1
       - name: Deploy API Gateway
         env:
           PROJECT_ID: ${{ env.PROJECT_ID }}
-          API_ID: ${{ steps.decide.outputs.api_id }}
-          GATEWAY_ID: ${{ steps.decide.outputs.gateway_id }}
+          API_ID: ${{ needs.discover-render.outputs.api_id }}
+          GATEWAY_ID: ${{ needs.discover-render.outputs.gateway_id }}
           REGION: ${{ env.REGION }}
           OPENAPI: out/gateway.yaml
         shell: bash
         run: |
           export REGION="${REGION:-asia-northeast1}"
           bash scripts/gateway/deploy-gateway.sh
-
       - name: Summarize Gateway Host
         env:
           PROJECT_ID: ${{ env.PROJECT_ID }}
-          GATEWAY_ID: ${{ steps.decide.outputs.gateway_id }}
+          GATEWAY_ID: ${{ needs.discover-render.outputs.gateway_id }}
           REGION: ${{ env.REGION }}
         shell: bash
         run: |
@@ -103,4 +122,4 @@ jobs:
           echo "Gateway: $GATEWAY_ID" >> "$GITHUB_STEP_SUMMARY"
           echo "Region:  $REGION" >> "$GITHUB_STEP_SUMMARY"
           echo "Host:    https://$host" >> "$GITHUB_STEP_SUMMARY"
-          echo "API ID:  ${{ steps.decide.outputs.api_id }}" >> "$GITHUB_STEP_SUMMARY"
+          echo "API ID:  ${{ needs.discover-render.outputs.api_id }}" >> "$GITHUB_STEP_SUMMARY"
