ci(backend): use repo root as Cloud Build context (-f services//Dockerfile) to include go.work/pkg in COPY

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -106,11 +106,12 @@ jobs:
           AR_HOST="${ARTIFACT_LOCATION:-asia-northeast1}-docker.pkg.dev"
           IMAGE="${AR_HOST}/${PROJECT_ID}/${ARTIFACT_REPO}/${SERVICE}"
           PRIMARY_TAG="${{ needs.meta.outputs.primary_tag }}"
-          # Service path (frontend Cloud Run is in hosting/, others in services/<name>)
-          SERVICE_PATH="services/${SERVICE}"
-          if [[ "$SERVICE" == "frontend" ]]; then SERVICE_PATH="hosting"; fi
-          echo "Submitting Cloud Build for ${IMAGE}:${PRIMARY_TAG} from ${SERVICE_PATH}"
-          BUILD_NAME=$(gcloud builds submit "${SERVICE_PATH}" \
+          # Use repository root as build context to allow Dockerfile to COPY go.work/pkg
+          DOCKERFILE_PATH="services/${SERVICE}/Dockerfile"
+          if [[ ! -f "$DOCKERFILE_PATH" ]]; then echo "Dockerfile not found: $DOCKERFILE_PATH" >&2; exit 1; fi
+          echo "Submitting Cloud Build for ${IMAGE}:${PRIMARY_TAG} using -f ${DOCKERFILE_PATH} (context: repo root)"
+          BUILD_NAME=$(gcloud builds submit . \
+            -f "$DOCKERFILE_PATH" \
             --project "${PROJECT_ID}" \
             --tag "${IMAGE}:${PRIMARY_TAG}" \
             --async \
