--- a/.github/workflows/deploy-gateway.yml
+++ b/.github/workflows/deploy-gateway.yml
@@ -89,6 +89,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: discover-render
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Download rendered spec
         uses: actions/download-artifact@v4
         with:
